--- a/package.json
+++ b/package.json
@@ -153,6 +153,12 @@
       "hash": "QmQBB2dQLmQHJgs2gqZ3iqL2XiuCtUCvXzWt5kMXDf5Zcr",
       "name": "go-maddr-filter",
       "version": "1.1.4"
+    },
+    {
+      "author": "whyrusleeping",
+      "hash": "QmQGX417WoxKxDJeHqouMEmmH4G1RCENNSzkZYHrXy3Xb3",
+      "name": "go-libp2p-netutil",
+      "version": "0.3.3"
     }
   ],
   "gxVersion": "0.11.0",
