--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -48,3 +48,7 @@
 [[constraint]]
   branch = "master"
   name = "code.cloudfoundry.org/bytefmt"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.2.0"
