--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -56,3 +56,7 @@
 [[constraint]]
   name = "github.com/takama/daemon"
   version = "0.9.3"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/golang/mock"
