--- a/package.json
+++ b/package.json
@@ -165,6 +165,12 @@
       "hash": "QmSjoxpBJV71bpSojnUY1K382Ly3Up55EspnDx6EKAmQX4",
       "name": "go-libp2p-floodsub",
       "version": "0.9.9"
+    },
+    {
+      "author": "multiformats",
+      "hash": "QmZyZDi491cCNTLfAhwcaDii2Kg4pwKRkhqQzURGDvY6ua",
+      "name": "go-multihash",
+      "version": "1.0.7"
     }
   ],
   "gxVersion": "0.11.0",
