--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -58,5 +58,9 @@
   version = "0.9.3"
 
 [[constraint]]
-  branch = "master"
   name = "github.com/golang/mock"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/stratumn/sdk"
+  version = "0.2.0"
