--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,33 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Alice Node",
-            "type": "go",
-            "request": "launch",
-            "mode": "debug",
-            "remotePath": "",
-            "port": 2345,
-            "host": "127.0.0.1",
-            "program": "${workspaceRoot}",
-            "env": {},
-            "args": ["up"],
-            "showLog": true
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Alice Node",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "remotePath": "",
+      "port": 2345,
+      "host": "127.0.0.1",
+      "program": "${workspaceRoot}",
+      "env": {},
+      "args": ["up"],
+      "showLog": true
+    },
+    {
+      "name": "Alice Replay",
+      "type": "go",
+      "request": "launch",
+      "mode": "remote",
+      "remotePath": "${workspaceRoot}",
+      "host": "127.0.0.1",
+      "port": 50505,
+      "program": "${workspaceRoot}",
+      "env": {},
+      "showLog": true
+    }
+  ]
 }
