--- a/package.json
+++ b/package.json
@@ -193,6 +193,11 @@
       "hash": "QmPUHzTLPZFYqv8WqcBTuMFYTgeom4uHHEaxzk7bd5GYZB",
       "name": "go-libp2p-transport",
       "version": "2.2.14"
+    },
+    {
+      "hash": "QmSpJByNKFX1sCsHBEp3R73FL4NF6FnQTEGyNAXHm2GS52",
+      "name": "go-log",
+      "version": "1.2.0"
     }
   ],
   "gxVersion": "0.11.0",
@@ -202,3 +207,4 @@
   "releaseCmd": "git commit -a -m \"gx publish $VERSION\"",
   "version": "0.0.0"
 }
+
