--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,7 +24,7 @@
       "args": []
     },
     {
-      "name": "Alice Node",
+      "name": "Indigo Node",
       "type": "go",
       "request": "launch",
       "mode": "debug",
@@ -37,7 +37,7 @@
       "showLog": true
     },
     {
-      "name": "Alice Replay",
+      "name": "Indigo Node Replay",
       "type": "go",
       "request": "launch",
       "mode": "remote",
