metrics: introduce opencensus. p2p host uses opencensus to capture bandwidth metrics.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -74,3 +74,7 @@
   # This is required because Docker claims it needs ^0.4.
   name = "github.com/gogo/protobuf"
   version = "~1.0.0"
+  
+[[constraint]]
+  branch = "master"
+  name = "go.opencensus.io"
