--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,26 +1,3 @@
-
-# Gopkg.toml example
-#
-# Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
-# for detailed Gopkg.toml documentation.
-#
-# required = ["github.com/user/thing/cmd/thing"]
-# ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
-#
-# [[constraint]]
-#   name = "github.com/user/project"
-#   version = "1.0.0"
-#
-# [[constraint]]
-#   name = "github.com/user/project2"
-#   branch = "dev"
-#   source = "github.com/myfork/project2"
-#
-# [[override]]
-#  name = "github.com/x/y"
-#  version = "2.4.0"
-
-
 [[constraint]]
   branch = "master"
   name = "github.com/jhump/protoreflect"
@@ -30,8 +7,8 @@
   name = "github.com/pelletier/go-toml"
 
 [[constraint]]
-  branch = "master"
   name = "github.com/golang/protobuf"
+  version = "^1.1.0"
 
 [[constraint]]
   branch = "master"
@@ -75,6 +52,10 @@
   name = "github.com/gogo/protobuf"
   version = "~1.0.0"
   
-[[constraint]]
-  branch = "master"
+[[override]]
   name = "go.opencensus.io"
+  version = ">=0.12.0"
+
+[[constraint]]
+  name = "contrib.go.opencensus.io/exporter/stackdriver"
+  version = "0.5.0"
