*: GenSwarmNetwork moved to go-testutil

--- a/package.json
+++ b/package.json
@@ -198,6 +198,12 @@
       "hash": "QmSpJByNKFX1sCsHBEp3R73FL4NF6FnQTEGyNAXHm2GS52",
       "name": "go-log",
       "version": "1.2.0"
+    },
+    {
+      "author": "whyrusleeping",
+      "hash": "QmRNhSdqzMcuRxX9A1egBeQ3BhDTguDV5HPwi8wRykkPU8",
+      "name": "go-testutil",
+      "version": "1.2.7"
     }
   ],
   "gxVersion": "0.11.0",
