app: remove old Indigo integration. We will re-start from scratch with what we learnt.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,26 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch postgresauditstore test function",
-      "type": "go",
-      "request": "launch",
-      "mode": "test",
-      "program":
-        "${workspaceRoot}/core/protocol/indigo/store/audit/postgresauditstore/",
-      "env": {},
-      "args": []
-    },
-    {
-      "name": "Launch indigo postgres store test function",
-      "type": "go",
-      "request": "launch",
-      "mode": "test",
-      "program": "${workspaceRoot}/core/service/indigo/store/",
-      "env": {},
-      "args": []
-    },
-    {
-      "name": "Indigo Node",
+      "name": "Stratumn Node",
       "type": "go",
       "request": "launch",
       "mode": "debug",
@@ -37,7 +18,7 @@
       "showLog": true
     },
     {
-      "name": "Indigo Node Replay",
+      "name": "Stratumn Node Replay",
       "type": "go",
       "request": "launch",
       "mode": "remote",
