--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -1,5 +1,5 @@
 scrape_configs:
-- job_name: 'indigo-node'
+- job_name: 'stratumn-node'
   scrape_interval: 10s
   static_configs:
   - targets: ['localhost:8905']
