--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,7 +36,7 @@
 
 [[constraint]]
   name = "github.com/golang/mock"
-  branch = "master"
+  version = "^1.1.1"
 
 [[override]]
   name = "github.com/hpcloud/tail"
