--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -17,16 +17,18 @@ blocks:
           - export "GOPATH=$(go env GOPATH)"
           - export "GOBIN=${GOPATH}/bin"
           - export "PATH=${GOBIN}:${PATH}"
+          - mkdir -vp $GOPATH
       jobs:
         - name: Install and cache Go tools
           commands:
+            - cd $GOPATH
             # Only update binaries once a month.
             - KEY=gotools-$(date +%Y%m)-v1
             - cache has_key "$KEY" || mkdir -vp "${GOBIN}"
             - cache restore "$KEY"
             - cache has_key "$KEY" || go get -u github.com/golangci/golangci-lint/cmd/golangci-lint
             # Cache everything in $GOPATH/bin.
-            - cache store "$KEY" $GOBIN
+            - cache store "$KEY" bin
 
   - name: Warm cache
     task:
@@ -37,7 +39,9 @@ blocks:
           - export "GOPATH=$(go env GOPATH)"
           - export "GOBIN=${GOPATH}/bin"
           - export "PATH=${GOBIN}:${PATH}"
+          - mkdir -vp $GOPATH
           # Load Go tools from cache.
+          - cd $GOPATH
           - cache restore gotools-$(date +%Y%m)-v1
           # Git checkout.
           - checkout
@@ -46,7 +50,7 @@ blocks:
           commands:
             - export "KEY=deps-$(checksum go.sum)-v1"
             - cache restore "$KEY"
-            - cache has_key "$KEY" || go mod vendor
+            - cache has_key "$KEY" || (go mod download && go mod vendor)
             - cache store $KEY vendor
 
   - name: Lint and test
@@ -58,13 +62,16 @@ blocks:
           - export "GOPATH=$(go env GOPATH)"
           - export "GOBIN=${GOPATH}/bin"
           - export "PATH=${GOBIN}:${PATH}"
+          # Tell go to use the vendor directory instead of pulling dependencies
+          - export "GOFLAGS=-mod=vendor"
+          - mkdir -vp $GOPATH
           # Load Go tools from cache.
+          - cd $GOPATH
           - cache restore gotools-$(date +%Y%m)-v1
           # Git checkout.
           - checkout
           # Restore caches.
           - cache restore deps-$(checksum go.sum)-v1
-          - cache restore "$KEY"
           # Other tasks.
           - make --touch protobuf
       secrets:
